clusters/wrtk8s/vllm-system/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  namespace: vllm-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ollama.jgarr.net
    external-dns.alpha.kubernetes.io/target: 10.1.1.152
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
  hostnames:
    - ollama.jgarr.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: open-webui
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qwen36-27b
  namespace: vllm-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ai.jgarr.net
    external-dns.alpha.kubernetes.io/target: 10.1.1.152
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
  hostnames:
    - ai.jgarr.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qwen36-27b
          port: 8000
